[package]
authors = ['CloudWalk']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node with Ethereum-like capabilities'
edition = '2021'
homepage = 'https://substrate.io'
license = 'GPL-3.0'
name = 'cloudwalk-network-testnet-node'
publish = false
repository = 'https://github.com/cloudwalk/cloudwalk-network'
version = '1.0.3'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies.substrate-build-script-utils]
branch = "cloudwalk-polkadot-v0.9.25"
git = 'https://github.com/cloudwalk/substrate'
version = '3.0.0'

[features]
aura = ['cloudwalk-network-testnet-runtime/aura']
default = ['aura']
manual-seal = ['cloudwalk-network-testnet-runtime/manual-seal']
rpc_binary_search_estimate = ['fc-rpc/rpc_binary_search_estimate']
runtime-benchmarks = ['cloudwalk-network-testnet-runtime/runtime-benchmarks']

[dependencies]
async-trait = '0.1'
futures = '0.3'
jsonrpc-core = '18.0.0'
jsonrpc-pubsub = '18.0.0'
log = '0.4.8'
jsonrpsee = { version = "0.14.0", features = ["server", "macros"] }

[dependencies.clap]
features = ['derive']
version = '3.1'

[dependencies.codec]
features = ['derive']
package = 'parity-scale-codec'
version = '3.1'

[dependencies.fc-consensus]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fc-db]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fc-mapping-sync]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fc-rpc]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.fc-cli]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fc-rpc-core]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fp-consensus]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fp-dynamic-fee]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fp-evm]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fp-rpc]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.fp-storage]
git = 'https://github.com/cloudwalk/frontier.git'
branch = 'cloudwalk-polkadot-v0.9.25'


[dependencies.frame-benchmarking]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.frame-benchmarking-cli]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.frame-system]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.cloudwalk-network-testnet-runtime]
default-features = false
features = ['std']
path = '../runtime'

[dependencies.pallet-transaction-payment]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.pallet-transaction-payment-rpc]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-basic-authorship]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-cli]
features = ['wasmtime']
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-client-api]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-consensus]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-consensus-aura]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-consensus-manual-seal]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-executor]
features = ['wasmtime']
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-finality-grandpa]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-keystore]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-network]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-rpc]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-rpc-api]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-service]
features = ['wasmtime']
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-telemetry]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-transaction-pool]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sc-transaction-pool-api]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-api]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-block-builder]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-blockchain]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-consensus]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-consensus-aura]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-core]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-finality-grandpa]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-inherents]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-keyring]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-runtime]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.sp-timestamp]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'

[dependencies.substrate-frame-rpc-system]
git = 'https://github.com/cloudwalk/substrate'
branch = 'cloudwalk-polkadot-v0.9.25'
